feat(mutation): add direct mutation testing and unit test suite for production JavaResolver.kt